- BuddyPress: Updated from version 2.3.2.1 to version 2.4.3 (Trello #1040)
- Invite anyone: Changed activation URL to avoid problems if users_can_register is disabled (Trello #1114)
- GCE: Added default gce_feed_[start/end] default values for admin (Trello #1071)
- xtec-ldap-login: Added first version of the plugin (Trello #1105)


Changes 15.12.14
---------------------------------------------------------------------------------------
- XTEC lib: Changed replace_url to support only a single URL (Trello #1027)
- Theme reactor-serveis-educatius: Improved menu and added search option in responsive version (Trello #981)
- Theme reactor: Fixed position of the legends of the images in custom galleries inserted in articles (Trello #1011)
- Theme reactor-primaria-1: Fixed side menu in pages when there are subpages. (Trello #1010)
- BuddyPress: Updated catalan translation (Trello #987)
- XTEC lib Fixed parsing apostrophes when activating a service and add support for table wp_term_taxonomy (Trello #1075)
- Invite Anyone: Upgraded extension to version 1.3.9 (Trello #987)
- Carrusel: Upgraded extension to version 2.3.1 (Trello #986)


Changes 15.11.16
---------------------------------------------------------------------------------------
- Moved activation script of Nodes to WordPress (Trello #996)
- Added support to activation script to serialized data in wp_postmeta (Trello #937)
- Blogger Importer: Upgraded to version 0.9 (Trello #936)
- wordpress-mu-common: Synced code with XTECBlocs. Changes have no effects to Nodes
- Stats widget: Added margin-bottom (Trello #1009)
- Theme reactor-primaria-1: Added new Color Palette "Purple and Green" (GitHub #307)
- Theme reactor-primaria-1: Improvements to CSS styles and moved content from common_css to code (GitHub #303)
- wp-recaptcha: Added default configuration for Nodes when activating plugin (Trello #926)
- Added ability to decide if a client is "Servei Educatiu" (Trello #981)